# projektiranje-autonomnih-sustava

seminar/: .GEMINI  .clinerules  .copilot-instructions.md  .cursorrules  .gitignore  CLAUDE.md  README.md
seminar/.agent/: instructions.md
seminar/.agent/config/: mcp_playbook.md  memory_rules.md  session_bootstrap.md  skills_playbook.md
seminar/.agent/context/: knowledge_base.md
seminar/.agent/logs/: action_history.md  prompt_log.md
seminar/sources/docs/: index.md
seminar/task/: backlog.md  original_task.md  roadmap.md
sensor_fusion/src/turtlesim_sensors/: package.xml  setup.cfg  setup.py
sensor_fusion/src/turtlesim_sensors/config/: ekf_map_odom.yaml  ekf_odom_base.yaml
sensor_fusion/src/turtlesim_sensors/launch/: ekfs.launch.py
sensor_fusion/src/turtlesim_sensors/turtlesim_sensors/: odometry.py
sensor_fusion/src/turtlesim_sensors_template/: README.md  package.xml  setup.cfg  setup.py
sensor_fusion/src/turtlesim_sensors_template/launch/: turtlesim_pos_odom.launch.py
sensor_fusion/src/turtlesim_sensors_template/turtlesim_sensors_template/: odometry.py  positioning_system.py
student-assignment-01/: README.md  robot_description.txt
student-assignment-01/fanuc/fanuc_crx10ia_support/: CMakeLists.txt  package.xml
student-assignment-01/fanuc/fanuc_lrmate200ic_support/: CMakeLists.txt  package.xml
student-assignment-01/fanuc/fanuc_m10ia_support/: CMakeLists.txt  package.xml
student-assignment-01/fanuc/fanuc_m710ic_support/: CMakeLists.txt
student-assignment-01/src/fanuc_m10ia_support/: CMakeLists.txt
student-assignment-01/src/fanuc_m10ia_support/launch/: fanuc_controllers.launch.py  publish_forward_positions.launch.py  publish_trajectory.launch.py  view_robot.launch.py
student-assignment-01/src/fanuc_m10ia_support/test/: README.md
student-assignment-01/src/fanuc_m10ia_support/urdf/: m10ia.xacro  m10ia_ros2_control.xacro
student-assignment-02/: 2D_GOAL_POSE_GUIDE.md  A_STAR_COMPLETE_GUIDE.md  A_STAR_PATH_PLANNER.md  CHANGES_SUMMARY.md  COMPILATION_FIX.md  COMPLETE_WORKFLOW.md  FINAL_FIX_LASER_FRAME.md  FIX_BUILD_ERRORS.md  FIX_INSTRUCTIONS.md  FIX_NAVIGATION.md  FIX_SLAM_ERRORS.md  IMMEDIATE_DEBUG.md  MAP_SELECTION_GUIDE.md  NAVIGATION_GUIDE_NAV2_FINAL.md  PREMAPPED_MAP_GUIDE.md  PYTHON_PACKAGE_FIX.md  QUICKSTART_NAV2.md  QUICK_START.md  README.md  README_A_STAR.md  README_PYTHON_A_STAR.md  RVIZ_CACHE_CLEANUP.md  RVIZ_CLEAN_START.md  RVIZ_FINAL_SOLUTION.md  RVIZ_FIX.md  SLAM_COMPUTE_ODOM_FIX.md  SLAM_MAPPING_DEBUG.md  SLAM_ODOM_POSE_FIX.md  TROUBLESHOOTING.md  TROUBLESHOOTING_STAGE_ERROR.md  build_and_run.sh  frames_2026-01-07_12.46.37.gv
student-assignment-02/config/: mapper_params_online_async.yaml  rviz_config.rviz
student-assignment-02/data/: my_map.pgm  my_map.yaml
student-assignment-02/data/maps/my_map/: my_map.pgm
student-assignment-02/launch/: mapping_complete_launch.py  online_async_launch.py  stage_launch.py
student-assignment-02/mapped_maps/map_02/: map_02.pgm  map_02.yaml
student-assignment-02/src/student_assignment_02/: CMakeLists.txt  package.xml  pyproject.toml  setup.py
student-assignment-02/src/student_assignment_02/config/: mapper_params_online_async.yaml  rviz_config.rviz  rviz_navigation.rviz
student-assignment-02/src/student_assignment_02/launch/: complete_mapping_launch.py  flexible_path_planning_launch.py  localization_complete_launch.py  map_view_launch.py  mapping_complete_launch.py  mapping_launch.py  navigation_astar_only.launch.py  navigation_complete.launch.py  navigation_complete_nav2.launch.py  navigation_launch.py  navigation_with_map_launch.py  online_async_launch.py  path_planning_launch.py  path_planning_with_map_launch.py  stage_launch.py
student-assignment-02/src/student_assignment_02/mapped_maps/map_01/: map_01.pgm  map_01.yaml
student-assignment-02/src/student_assignment_02/src/: __init__.py  a_star.py  goal_navigation_node.cpp  goal_navigation_node.py  path_planning_node.cpp  path_planning_node.py
student-assignment-02/src/student_assignment_02/student_assignment_02/: a_star_path_planner.py  nav2_adapter.py  navigation_complete_nav2.launch.py  simple_astar_planner.py  simple_path_follower.py  slam_map_saver.py  utils.py
